--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>	
 <!--Copyright Git.Trail-->
 <head>
-	<title>An Example Website</title>
+	<title>Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,7 +15,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Some dummy facts.
 		</p>
 	</main>
 	<footer class="container">
