--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>	
-<!--Copyright Git.Trail-->
+<!--
+	Copyright Git.Trail
+	Adding changes before rebasing conflicts
+-->
 <head>
 
 	<title>An Example Website</title>
