Done with simple.html

--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
 -->
 <head>
 
-	<title>An Example Website</title>
+	<title>Update stash Example Website</title>
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
@@ -20,7 +20,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Some dummy facts.
+			Some dummy facts. blah blah blah 
 		</p>
 	</main>
 	<footer class="container">
