--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
 -->
 <head>
 
-	<title>Title for stash branch Example Website</title>
+	<title>Title for Tagging Example Website</title>
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
